# ga4_data_import

./: .gitignore  GA4_Data_Import_from_Google_Cloud_Storage copy.ipynb  GA4_Data_Import_from_Google_Cloud_Storage.ipynb  Makefile  README.md  notebook.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  pylint.yml  python-publish.yml
doc/source/: conf.py
docs/: index.md
docs/source/: conf.py  index.rst
ga4_data_import/: __init__.py  common.py  compute.py  sftp_server.py  shared.py  storage.py  workflow.py
scripts/: GA4_Data_Import.ipynb  GA4_Data_Import_from_Google_Cloud_Storage copy.ipynb  GA4_Data_Import_from_Google_Cloud_Storage.ipynb  GCS_to_GA4.ipynb
static/: architecture.dot
